added computing page

--- a/mauritius.html
+++ b/mauritius.html
@@ -47,7 +47,7 @@
     
                     <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="index.html"> <span>Home</span></a></div>
                     <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="#"> <span>The Alu Advantage</span></a></div>
-                    <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="#"> <span>Undergraduate</span></a></div>
+                    <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="computing.html"> <span>Undergraduate</span></a></div>
                     <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="#"> <span>Student Life</span></a></div>
                     <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="#"> <span>About</span></a></div>
                 </div>
