--- a/computing.html
+++ b/computing.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <!--Navigation-->
+    <div class="flex">
     <nav class="flex-grow items-center">
       
         <!--Logo-->
@@ -55,8 +56,9 @@
                 <div class="px-3 py-2 rounded text-gray-500 hover:text-white hover:bg-gray-600"><a href="#"> <span>About</span></a></div>
             </div>
             </div>
-        </div>
-     </nav>
+        </nav>
+     </div>
+    </div>
      <main>
          <!-- Heading -->
         <div  class= "text-center text-2xl md:text-4xl w-full">
@@ -216,7 +218,7 @@
  
        <div class=" h-auto flex mx-9 lg:mx-24 my-16 shadow-2xl" style="background-color: #fafbfb;"> 
         <div class="image2 mx-auto lg:my-auto justify-center self-center align-middle">
-            <img class="image__img h-auto" src="./computing_page/computing_images/old-campus-banner (1).jpg" alt="Website">
+            <img class="image__img h-auto" src="./computing_page/computing_images/web_dev.jpg" alt="Website">
             <div class="image__overlay image__overlay--blur lg:text-4xl">
                 <a class="text-white font-bold w-auto py-10 text-2xl lg:text-4xl" id="button" href="#" target="parent">Explore</a>
             </div> 
@@ -231,7 +233,7 @@
         <h1 class="text-center text-2xl lg:text-4xl font-bold">Security Landscapes</h1>
      <div class=" h-auto flex mx-9 lg:mx-24 my-16 shadow-2xl" style="background-color: #fafbfb;"> 
         <div class="image2 mx-auto lg:my-auto justify-center self-center align-middle">
-            <img class="image__img" src="./computing_page/computing_images/old-campus-banner (1).jpg" alt="Website">
+            <img class="image__img" src="./computing_page/computing_images/cyber_sec.jpg" alt="Website">
             <div class="image__overlay image__overlay--blur lg:text-4xl">
                 <a class="text-white font-bold w-auto py-10 text-2xl lg:text-4xl" id="button" href="./course specifications/Security_Landscapes.docx" target="parent">Explore</a>
             </div> 
@@ -245,7 +247,7 @@
  
       <div class=" h-auto flex mx-9 lg:mx-24 my-16 shadow-2xl" style="background-color: #fafbfb;"> 
         <div class="image2 mx-auto lg:my-auto justify-center self-center align-middle">
-            <img class="image__img" src="./computing_page/computing_images/old-campus-banner (1).jpg" alt="Website">
+            <img class="image__img" src="./computing_page/computing_images/programming.jpg" alt="Website">
             <div class="image__overlay image__overlay--blur lg:text-4xl">
                 <a class="text-white font-bold w-auto py-10 text-2xl lg:text-4xl" id="button" href="./course specifications/Programming.pdf" target="parent">Explore</a>
             </div> 
@@ -259,7 +261,7 @@
         <h1 class="font-bold text-2xl text-center lg:text-4xl">Database Development</h1>
         <div class=" h-auto flex mx-9 lg:mx-24 my-16 shadow-2xl" style="background-color: #fafbfb;"> 
             <div class="image2 mx-auto lg:my-auto justify-center self-center align-middle">
-                <img class="image__img" src="./computing_page/computing_images/old-campus-banner (1).jpg" alt="Website">
+                <img class="image__img" src="./computing_page/computing_images/database_dev.jpg" alt="Website">
                 <div class="image__overlay image__overlay--blur lg:text-4xl">
                     <a class="text-white font-bold w-auto py-10 text-2xl lg:text-4xl" id="button" href="https://www.gcu.ac.uk/study/modules/info/?Module=M2I322954"  target="parent">Explore</a>
                 </div> 
@@ -325,7 +327,7 @@
         <div class=" profile-box mx-auto">
             <h4>  Esther Babalola</h4>
             <small>Software Product Developer</small>
-            <img src="./computing_page/computing_images/stephen1.jpg">
+            <img src="./computing_page/computing_images/esther2.jpg">
             <div class="social-box">
                    <a href="https://www.instagram.com/alueducation/"><i class="fab fa-facebook"></i></a>
                    <a href="https://www.instagram.com/alueducation/"><i class="fab fa-instagram"></i></a>
